<resources>
    <string name="app_name">Personal Health Monitor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fab_content_desc">Aggiungi</string>
    <string name="media">Media</string>
    <string name="minima">Minima</string>
    <string name="massima">Massima</string>
    <string name="settings">Settings</string>
    <string name="save">save</string>
    <string name="title_reports">Reports</string>
    <string name="title_graphs">Graphs</string>
    <string name="Attenzione">Attenzione</string>
    <string name="ContinuaCosì">Continua Così</string>
    <string name="TuttoBene">Tutto bene</string>
    <string name="indice_glicemico">Indice glicemico</string>
    <string name="temperatura_corporea">Temperatura Corporea</string>
    <string name="pressioe_sistolica">Pressioe Sistolica</string>
    <string name="pressioe_diastolica">Pressioe Diastolica</string>
    <string name="monitora_questa_metrica">Monitora questa metrica</string>
    <string name="notifiche">Notifiche</string>
    <string name="orario_di_notifica">Orario di notifica</string>
    <string name="soglie">Soglie</string>
    <string name="soglia_minima">Soglia Minima</string>
    <string name="soglia_massima">Soglia Massima</string>
    <string name="data">Data</string>
    <string name="salva_modifiche">Salva Modifiche</string>
    <string name="importanza">Importanza</string>
    <string name="commento_n_personale">Commento\n Personale</string>
    <string name="mg_dl">mg/dl</string>
    <string name="indice_n_glicemico">Indice\n Glicemico</string>
    <string name="mmhg">mmHg</string>
    <string name="slash">/</string>
    <string name="pressione_n_sistolica_diastolica">Pressione\n (Sistolica/Diastolica)</string>
    <string name="c">°C</string>
    <string name="temperatura_n_corporea">Temperatura\n Corporea</string>
    <string name="hh_mm">HH:mm</string>
    <string name="ora">Ora</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="minParam">Devono esserci almeno 2 parametri vitali</string>
    <string name="badFormat">Alcuni dati sono in un formato non valido</string>
</resources>