<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/dd_mm_yyyy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ora"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/hh_mm"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura_n_corporea"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/bodyTemperatureEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/c"
            android:ems="10"
            android:inputType="number"
            android:digits="1234567890."
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressione_n_sistolica_diastolica"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/systolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:hint="@string/mmhg"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/diastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/mmhg"
            android:inputType="number"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indice_n_glicemico"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/glicemixIndexEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mg_dl"
            android:inputType="number"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commento_n_personale"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/personalCommentEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importanza"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:textColor="@color/red"/>
</LinearLayout>