<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/notifiche" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/orario_di_notifica" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soglie"
            android:paddingTop="30dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/list_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:text="@string/temperatura_corporea"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_minima"/>

            <EditText
                android:id="@+id/min_body_temperature"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_massima"/>

            <EditText
                android:inputType="number"
                android:id="@+id/max_body_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>


        <CheckBox android:id="@+id/checkbox_body_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitora_questa_metrica"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:text="@string/pressioe_sistolica"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_minima"/>

            <EditText
                android:id="@+id/min_systolic_pressure"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_massima"/>

            <EditText
                android:inputType="number"
                android:id="@+id/max_systolic_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/pressioe_diastolica"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_minima"/>

            <EditText
                android:id="@+id/min_diastolic_pressure"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_massima"/>

            <EditText
                android:inputType="number"
                android:id="@+id/max_diastolic_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <CheckBox android:id="@+id/checkbox_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitora_questa_metrica"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:text="@string/indice_glicemico"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_minima"/>

            <EditText
                android:id="@+id/min_glycemic_index"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soglia_massima"/>

            <EditText
                android:inputType="number"
                android:id="@+id/max_glycemic_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>


        <CheckBox android:id="@+id/checkbox_glycemic_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitora_questa_metrica"/>

        <Button
            android:id="@+id/save_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salva_modifiche"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>